--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <body>
         <script type='text/javascript' src='https://d3js.org/d3.v7.min.js'></script>
-        <div id="map" style="float : left; width:50%;"></div>
+        <div id="map" style="float : left; width:50%; text-align : center;"></div>
         <div id="scatter" style="float : right; width:50%"></div>
         <div id="line" style="float : bottom; width:100%"></div>
     </body>
