--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <body>
         <script type='text/javascript' src='https://d3js.org/d3.v7.min.js'></script>
         <div id="map" style="float : left; width:50%; text-align : center;"></div>
-        <div id="scatter" style="float : right; width:50%"></div>
-        <div id="line" style="float : bottom; width:100%"></div>
+        <div id="pie" style="float : right; width:50%"></div>
+        <div id="line" style="float : left; width:50%"></div>
+        <div id="info" style="float : right; width:50%"></div>
     </body>
     <script type='text/javascript' src='./globe.js'></script>
     <script type='text/javascript' src='./graphs.js'></script>
